[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Fonts/design.graffiti.SNAP____.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/girlGameSprites/glucoseMeter.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/girlGameSprites/panelGame.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/girlGameSprites/pauseButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/girlQuizSprites/answerButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/girlGameOverSprites/gameOverPanel.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/girlGameOverSprites/gameOverGirl.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/girlGameSprites/girlRoom.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/girlGameOverSprites/tryAgainButton.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/girlGameOverSprites/initialScreenButton.png" type="Texture" id=10]
[ext_resource path="res://Scripts/girlGameOver.gd" type="Script" id=11]
[ext_resource path="res://Assets/Sprites/girlGameSprites/exerciseButton.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/girlGameSprites/insulinButton.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/girlInitialScreenSprite/configButton.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "blinkAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 1 )

[node name="gameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 396.0
margin_bottom = 704.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panelEmpty" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 396.0
margin_bottom = 704.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="girlGameOver" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 396.0
margin_bottom = 704.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glucoseMeter" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 396.0
margin_bottom = 704.0
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointsPanel" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.368627 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.6727
margin_top = 3.24367
margin_right = 2018.67
margin_bottom = 3587.24
rect_scale = Vector2( 0.098, 0.08 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exercisePanel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.6269
margin_top = -3.05594
margin_right = 392.373
margin_bottom = 700.944
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="insulinPanel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.6269
margin_top = -3.05594
margin_right = 392.373
margin_bottom = 700.944
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButton" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.152843
margin_top = -0.384854
margin_right = 396.153
margin_bottom = 703.615
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameOverMessage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.152843
margin_top = 21.8639
margin_right = -143.847
margin_bottom = -234.136
rect_scale = Vector2( 0.067, 0.067 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameOverPopup" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.152843
margin_top = -0.384854
margin_right = 396.153
margin_bottom = 703.615
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tryAgainButton" type="Button" parent="gameOverPopup"]
margin_left = 85.0
margin_top = 301.0
margin_right = 260.0
margin_bottom = 362.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tryAgainSprite" type="Sprite" parent="gameOverPopup/tryAgainButton"]
position = Vector2( 182.95, 179.621 )
texture = ExtResource( 9 )

[node name="initialScreenButton" type="Button" parent="gameOverPopup"]
margin_left = 281.0
margin_top = 300.0
margin_right = 457.0
margin_bottom = 360.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initialScreenSprite" type="Sprite" parent="gameOverPopup/initialScreenButton"]
position = Vector2( -10.657, 181.287 )
texture = ExtResource( 10 )

[node name="layer" type="Node2D" parent="."]

[node name="glucosePoints" type="Label" parent="layer"]
margin_left = -3.84096
margin_top = 238.26
margin_right = 31.1591
margin_bottom = 255.26
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "70"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="totalPoints" type="Label" parent="layer"]
margin_left = 3.40472
margin_top = 2.38898
margin_right = 117.405
margin_bottom = 24.389
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0000"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blinkAnim = SubResource( 3 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveScoreButtonPressed" type="Button" parent="."]
margin_left = 56.3646
margin_top = 137.164
margin_right = 77.3646
margin_bottom = 157.164
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 8.74695
margin_top = 135.798
margin_right = 54.747
margin_bottom = 157.798
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButton2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.191
margin_top = 134.665
margin_right = 333.809
margin_bottom = 838.665
rect_scale = Vector2( 0.267, 0.267 )
mouse_filter = 2
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 9.0
margin_top = 113.0
margin_right = 87.0
margin_bottom = 133.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 39.8934, 10.1038 )
scale = Vector2( 0.067, 0.0997324 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Button"]
margin_right = 79.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "Ranking"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="gameOverPopup/tryAgainButton" to="." method="onTryAgainButtonPressed"]
[connection signal="pressed" from="gameOverPopup/initialScreenButton" to="." method="onInitialScreenButtonPressed"]
[connection signal="pressed" from="saveScoreButtonPressed" to="." method="onSaveButtonPressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
